<resources>
    <string name="app_name">GestInApp</string>
    <string name="loguearse">Loguearse</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="ingresar">Ingresar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="casita">Casita</string>
    <string name="nombreuser">Nombre User</string>
    <string name="siguiente">Siguiente</string>
    <string name="producto">Producto</string>
    <string name="personal">Personal</string>
    <string name="inventario">Inventario</string>
    <string name="reporteinventario">Inventario</string>

    <string name="procesador">Procesador</string>
    <string name="cases">Case</string>
    <string name="memorias">memorias</string>
    <string name="mouse">Mouse</string>
    <string name="monitores">Monitores</string>
    <string name="fuentes">Fuentes</string>
    <string name="teclados">Teclados</string>
    <string name="almacenamiento">Almacenamiento</string>
    <string name="soporte">Soporte</string>
    <string name="idproducto">IdProducto</string>
    <string name="codigobarra">Codigo Barra</string>
    <string name="descripcion">Descripción</string>
    <string name="marca">Marca</string>
    <string name="registrar">Registrar</string>

    <string name="actualizar">Actualizar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombreempleado">Nombre</string>
    <string name="apellidoempleado">Apellido</string>
    <string name="telefonoempleado">Telefono</string>
    <string name="correoempleado">Correo</string>
    <string name="usuarioempleado">Usuario</string>
    <string name="contrasenaempleado">Contraseña</string>

    <string name="registrarempleado">Registrar</string>
    <string name="movimiento">Movimiento</string>
    <string name="productoinventario">Producto</string>
    <string name="almacen">Almacen</string>
    <string name="personalinventario">Personal</string>
    <string name="cantidad">Cantidad</string>
    <string name="ingreso" >ingreso</string>
    <string name="stock" >stock</string>
    <string name="cantidadx">Cantidad</string>

</resources>